--- a/components/style/themes/variable.scss
+++ b/components/style/themes/variable.scss
@@ -265,4 +265,5 @@
   --input-length-max-count-color: #616161;
   --input-addon-background-color: #f2f2f2;
   --input-addon-border-color: #d9d9d9;
+  --input-placeholder-color: #bcbcbc;
 }
