chore: update tabs vertical cal

--- a/components/tabs/style/component.scss
+++ b/components/tabs/style/component.scss
@@ -209,9 +209,9 @@
       }
       &__item {
         width: 70px;
+        height: 40px;
         padding: 0;
         text-align: center;
-        margin-bottom: 26px;
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
