--- a/components/style/themes/variable.scss
+++ b/components/style/themes/variable.scss
@@ -231,19 +231,19 @@
   --tabs-header-icon-sm: 12px;
   --tabs-header-icon-md: 14px;
   --tabs-header-icon-lg: 16px;
-  --tabs-default-color: #616161;
-  --tabs-default-hover-color: var(--theme-primary);
-  --tabs-default-disabled-color: var(--color-text-disabled);
-  --tabs-default-icon-color: #bcbcbc;
-  --tabs-default-active-background: var(--color-text-inverse);
-  --tabs-default-line-color: var(--theme-primary);
-  --tabs-default-active-color: var(--theme-primary);
-  --tabs-default-background-color: var(--color-text-inverse);
-  --tabs-default-card-background: #fafafa;
-  --tabs-default-noborder-background: #f2f2f2;
   --tabs-header-padding-sm: 8px;
   --tabs-header-padding-md: 12px;
   --tabs-header-padding-lg: 16px;
+  --tabs-default-color: #616161;
+  --tabs-default-hover-color: #33c98d;
+  --tabs-default-disabled-color: var(--color-text-disabled);
+  --tabs-default-icon-color: #bcbcbc;
+  --tabs-default-active-background: var(--color-text-inverse);
+  --tabs-default-line-color: #00bc70;
+  --tabs-default-active-color: #00bc70;
+  --tabs-default-background-color: var(--color-text-inverse);
+  --tabs-default-card-background: #fafafa;
+  --tabs-default-noborder-background: #f2f2f2;
 
   // Tooltip
   --tooltip-font-size: 12px;
