style: update input demo style

--- a/site/styles/pages/input.scss
+++ b/site/styles/pages/input.scss
@@ -2,7 +2,8 @@
 
 .input-page {
   .input-search-wrapper {
-    & + .zw-input-group__addon {
+    & + .zw-input-group__prepend,
+    & + .zw-input-group__append {
       padding: 0;
       border: 0;
 
