--- a/components/menu/style/component.scss
+++ b/components/menu/style/component.scss
@@ -1,5 +1,5 @@
 @mixin menu-size($height, $font-size) {
-  .za-menu-item {
+  @include e(item) {
     height: $height;
     line-height: $height;
     font-size: $font-size;
@@ -32,27 +32,26 @@
 
 $ease-in-out: cubic-bezier(0.645, 0.045, 0.355, 1);
 
-$prefixCls: za-menu;
-
-.#{$prefixCls} {
+@include b(menu) {
   list-style: none;
   margin: 0;
   padding: 0;
   height: 100%;
   background: var(--menu-default-bg-color);
   outline: none;
-  border-right: 1px solid #e8e8e8;
-  box-shadow: var(--box-shadow-light);
+  // border-right: 1px solid #e8e8e8;
+  // box-shadow: var(--box-shadow-light);
   transition: background .3s, width .2s;
   zoom: 1;
   font-feature-settings: 'tnum';
-  @include menu-size(40px, var(--font-size-md));
+  color: var(--menu-color);
+  @include menu-size(44px, var(--font-size-md));
 
-  &.za-menu-root {
+  @include m(root) {
     box-shadow: none;
   }
 
-  &-item {
+  @include e(item) {
     position: relative;
     display: block;
     font-weight: normal;
@@ -64,18 +63,18 @@ $prefixCls: za-menu;
     user-select: none;
     transition: color .3s $ease-in-out, border-color .3s $ease-in-out, background .3s $ease-in-out, padding .15s $ease-in-out;
 
-    .za-icon {
+    @include b(icon) {
       min-width: 14px;
-      margin-right: 10px;
+      margin-right: 12px;
       font-size: 14px;
       pointer-events: none;
       transition: font-size .15s cubic-bezier(.215, .61, .355, 1), margin .3s cubic-bezier(.645, .045, .355, 1);
 
-      + span {
-        pointer-events: none;
-        transition: opacity 0.3s $ease-in-out, width 0.3s $ease-in-out;
-        opacity: 1;
-      }
+      // + span {
+      //   pointer-events: none;
+      //   transition: opacity 0.3s $ease-in-out, width 0.3s $ease-in-out;
+      //   opacity: 1;
+      // }
     }
 
     > a {
@@ -96,46 +95,48 @@ $prefixCls: za-menu;
       color: var(--menuitem-active-color);
     }
 
-    &.selected,
-    &.active {
+    @include m(selected) {
       color: var(--menuitem-active-color);
       background: var(--menuitem-active-bg-color);
     }
-
-    &.disabled {
+    @include m(active) {
+      color: var(--menuitem-active-color);
+      background: var(--menuitem-active-bg-color);
+    }
+    @include m(disabled) {
       color: var(--menuitem-disabled-color);
       cursor: not-allowed;
-    }
 
-    &-divider {
-      height: 1px;
-      margin: 1px 0;
-      overflow: hidden;
-      padding: 0;
-      line-height: 0;
-      background-color: var(--menuitem-divider-bg-color);
+      &:hover {
+        color: var(--menuitem-disabled-color);
+      }
     }
   }
 
-  &-level-1 {
-    > .za-menu-submenu-title {
-      font-weight: 500;
-    }
+  @include e(divider) {
+    height: 1px;
+    margin: 1px 0;
+    overflow: hidden;
+    padding: 0;
+    line-height: 0;
+    background-color: var(--menuitem-divider-bg-color);
   }
 
-  &-submenu {
-    &:not(.za-menu-level-1) {
-      min-width: 160px;
-    }
-
+  @include e(submenu) {
+    min-width: 160px;
     height: auto;
 
-    &-title {
-      height: 40px;
-      line-height: 40px;
+    // &:not(.zw-menu--level1) {
+    //   min-width: 160px;
+    // }
+
+    @include e(title) {
+      height: 44px;
+      line-height: 44px;
       user-select: none;
       cursor: pointer;
       font-weight: normal;
+      font-size: 14px;
       text-overflow: ellipsis;
       overflow: hidden;
       transition: all 0.3s;
@@ -144,7 +145,7 @@ $prefixCls: za-menu;
         color: var(--menuitem-active-color);
       }
 
-      .za-icon {
+      @include b(icon) {
         min-width: 14px;
         margin-right: 10px;
         font-size: 14px;
@@ -157,320 +158,318 @@ $prefixCls: za-menu;
       }
     }
 
-    &-sub {
+    @include e(sub) {
       height: 0;
       padding: 0;
       overflow: hidden;
       transition: all .2s $ease-in-out;
     }
+
+    @include m(level1) {
+      min-width: auto;
+      @include e(title) {
+        height: 52px;
+        line-height: 52px;
+      }
+    }
   }
 
-  &.size-xl {
-    @include menu-size(40px, var(--font-size-xl));
+  @include m(xl) {
+    @include menu-size(44px, var(--font-size-xl));
   }
 
-  &.size-lg {
+  @include m(lg) {
     @include menu-size(36px, var(--font-size-lg));
   }
 
-  &.size-sm {
+  @include m(sm) {
     @include menu-size(28px, var(--font-size-sm));
   }
 
-  &.size-xs {
+  @include m(xs) {
     @include menu-size(24px, var(--font-size-sm));
   }
-}
 
-// collapsed样式
-.#{$prefixCls}-collapsed {
-  > .#{$prefixCls}-submenu > .#{$prefixCls}-submenu-title,
-  > .#{$prefixCls}-item {
-    left: 0;
-    text-overflow: clip;
-    padding: 0 (var(--menu-collapsed-width) - 16) / 2;
-  }
+  // collapsed 样式
+  @include m(collapsed) {
 
-  .#{$prefixCls}-item {
-    //padding-right: ($--menu-collapsed-width - 16) / 2;
-    &__tooltip {
-      width: 100%;
-      text-align: center;
+    @include e(submenu--level1) {
+      // TODO
+      > .zw-menu__title {
+        left: 0;
+        text-overflow: clip;
+        padding: 0 (var(--menu-collapsed-width) - 16) / 2;
 
-      .ui-popover-content {
-        .za-icon {
+        @include e(arrow) {
           display: none;
+        }
+      }
+      @include e(sub) {
+        min-width: 160px;
+        height: auto !important;
+        opacity: 0;
+        transform-origin: 0 0;
 
-          + span {
-            max-width: fit-content;
-            transition: opacity 0.3s $ease-in-out, width 0.3s $ease-in-out;
-            opacity: 1;
+        &.slide-up {
+          animation: slide-up 0.3s both;
+        }
+
+        &.slide-down {
+          animation: slide-down 0.3s both;
+        }
+      }
+    }
+
+    @include e(item--level1) {
+      left: 0;
+      text-overflow: clip;
+      padding: 0 (var(--menu-collapsed-width) - 16) / 2;
+    }
+
+    @include b(icon) {
+      display: block;
+      font-size: 16px;
+      line-height: 40px;
+      margin: 0;
+
+      + span {
+        max-width: 0;
+        display: inline-block;
+        opacity: 0;
+      }
+    }
+  }
+
+  // inline模式
+  @include m(inline) {
+    width: 100%;
+
+    @include e(submenu) {
+      @include e(title) {
+        position: relative;
+        &:hover {
+          @include e(arrow) {
+            &:after,
+            &:before {
+              background: linear-gradient(to right, var(--menuitem-active-color), var(--menuitem-active-color));
+            }
           }
         }
-      }
-    }
-  }
 
-  > .#{$prefixCls}-submenu > .#{$prefixCls}-submenu-title {
-    .#{$prefixCls}-submenu-arrow {
-      display: none;
-    }
-  }
+        @include e(arrow) {
+          transition: transform .3s $ease-in-out;
+          position: absolute;
+          top: 50%;
+          right: 20px;
+          width: 10px;
 
-  .#{$prefixCls}-submenu .#{$prefixCls}-submenu-sub {
-    min-width: 160px;
-    height: auto !important;
-    opacity: 0;
-    transform-origin: 0 0;
-
-    &.slide-up {
-      animation: slide-up 0.3s both;
-    }
-
-    &.slide-down {
-      animation: slide-down 0.3s both;
-    }
-  }
-
-  .za-icon {
-    //float: left;
-    font-size: 16px;
-    line-height: 40px;
-    margin: 0;
-
-    + span {
-      max-width: 0;
-      display: inline-block;
-      opacity: 0;
-    }
-  }
-}
-
-// inline模式
-.#{$prefixCls}-inline {
-  width: 100%;
-
-  .#{$prefixCls}-submenu {
-    &-title {
-      position: relative;
-
-      &:hover {
-        .#{$prefixCls}-submenu-arrow {
-          &:after,
-          &:before {
-            background: linear-gradient(to right, var(--menuitem-active-color), var(--menuitem-active-color));
+          &:before,
+          &:after {
+            content: '';
+            position: absolute;
+            vertical-align: baseline;
+            background: var(--menuitem-dark-active-color);
+            background-image: linear-gradient(to right, #909090, #909090);
+            width: 8px;
+            height: 2px;
+            border-radius: 2px;
+            transition: background .3s $ease-in-out, transform .3s $ease-in-out, top .3s $ease-in-out;
           }
-        }
-      }
-    }
-
-    &-arrow {
-      transition: transform .3s $ease-in-out;
-      position: absolute;
-      top: 50%;
-      right: 16px;
-      width: 10px;
-
-      &:before,
-      &:after {
-        content: '';
-        position: absolute;
-        vertical-align: baseline;
-        background: var(--menuitem-dark-active-color);
-        background-image: linear-gradient(to right, #909090, #909090);
-        width: 8px;
-        height: 2px;
-        border-radius: 2px;
-        transition: background .3s $ease-in-out, transform .3s $ease-in-out, top .3s $ease-in-out;
-      }
-
-      &:before {
-        transform: rotate(-45deg) translateX(2px);
-      }
-
-      &:after {
-        transform: rotate(45deg) translateX(-2px);
-      }
-    }
-
-    &.open {
-      > .#{$prefixCls}-submenu-title .#{$prefixCls}-submenu-arrow {
-        transform: translateY(-2px);
-
-        &:before {
-          transform: rotate(45deg) translateX(2px);
-        }
-
-        &:after {
-          transform: rotate(-45deg) translateX(-2px);
-        }
-      }
-    }
-  }
-
-  &.#{$prefixCls}-collapsed {
-    width: var(--menu-collapsed-width);
-
-    &.za-menu-light {
-      .#{$prefixCls}-submenu {
-        .#{$prefixCls}-submenu-sub {
-          background: #fff;
-        }
-      }
-    }
-
-    .#{$prefixCls}-submenu {
-      position: relative;
-
-      &-arrow {
-        &:before {
-          transform: rotate(-45deg) translateY(2px);
-        }
-
-        &:after {
-          transform: rotate(45deg) translateY(-2px);
-        }
-      }
-
-      &.open {
-        > .#{$prefixCls}-submenu-title .#{$prefixCls}-submenu-arrow {
-          transform: translateY(0);
 
           &:before {
-            transform: rotate(-45deg) translateY(2px);
+            transform: rotate(-40deg) translateX(3px);
           }
 
           &:after {
-            transform: rotate(45deg) translateY(-2px);
+            transform: rotate(40deg) translateX(-3px);
+          }
+        }
+      }
+    }
+
+    @include e(submenu--open) {
+      // TODO
+      > .zw-menu__title {
+        @include e(arrow) {
+          transform: translateY(-2px);
+
+          &:before {
+            transform: rotate(40deg) translateX(3px);
+          }
+
+          &:after {
+            transform: rotate(-40deg) translateX(-3px);
+          }
+        }
+      }
+    }
+
+    @include m(collapsed) {
+      width: var(--menu-collapsed-width);
+
+      @include m(light) {
+        @include e(submenu) {
+          @include e(sub) {
+            background: #fff;
           }
         }
       }
 
-      .#{$prefixCls}-submenu-sub {
-        position: absolute;
-        top: 0;
-        left: calc(100% + 8px);
-        height: auto;
-        overflow: visible;
-        z-index: 2;
-        background-color: var(--menu-dark-bg-color);
-        border-radius: 2px;
+      @include e(submenu) {
+        position: relative;
 
-        .#{$prefixCls}-item,
-        .#{$prefixCls}-submenu {
-          padding: 0 20px !important;
+        @include e(arrow) {
+          right: 0;
+          transform: translateY(0);
+          &:before {
+            transform: rotate(-40deg) translateY(3px);
+          }
+
+          &:after {
+            transform: rotate(40deg) translateY(-3px);
+          }
+        }
+
+        @include e(sub) {
+          position: absolute;
+          top: 0;
+          left: calc(100% + 4px);
+          height: auto;
+          overflow: visible;
+          z-index: 2;
+          background-color: var(--menu-dark-bg-color);
+          border-radius: 2px;
+
+          @include e(item) {
+            padding: 0 20px !important;
+          }
+          @include e(submenu) {
+            padding: 0 20px !important;
+          }
         }
       }
     }
   }
-}
 
-// horizontal模式
-.#{$prefixCls}-horizontal {
-  .#{$prefixCls}-item {
-    float: left;
-    padding: 0 var(--menuitem-horizontal-padding);
-    height: var(--menuitem-horizontal-height);
-    line-height: var(--menuitem-horizontal-height) - 2;
-    border-bottom: 2px solid transparent;
-
-    > a {
-      color: var(--menuitem-default-color);
-    }
-
-    &.active,
-    &:hover {
-      border-bottom: 2px solid var(--menuitem-active-color);
-      background: var(--menu-default-bg-color);
-      color: var(--menuitem-active-color);
+  // horizontal模式
+  @include m(horizontal) {
+    @include e(item) {
+      float: left;
+      padding: 0 var(--menuitem-horizontal-padding);
+      height: var(--menuitem-horizontal-height);
+      line-height: var(--menuitem-horizontal-height) - 2;
+      border-bottom: 2px solid transparent;
 
       > a {
+        color: var(--menuitem-default-color);
+      }
+
+      @include e(item--active) {
+        border-bottom: 2px solid var(--menuitem-active-color);
+        background: var(--menu-default-bg-color);
         color: var(--menuitem-active-color);
+
+        > a {
+          color: var(--menuitem-active-color);
+        }
+      }
+      &:hover {
+        border-bottom: 2px solid var(--menuitem-active-color);
+        background: var(--menu-default-bg-color);
+        color: var(--menuitem-active-color);
+
+        > a {
+          color: var(--menuitem-active-color);
+        }
       }
     }
+
+    &::after {
+      content: '';
+      display: block;
+      height: 0;
+      clear: both;
+    }
   }
 
-  &::after {
-    content: '';
-    display: block;
-    height: 0;
-    clear: both;
-  }
-}
+  // dark主题
+  @include m(dark) {
+    background: var(--menu-dark-bg-color);
 
-// dark主题
-.#{$prefixCls}-dark {
-  background: var(--menu-dark-bg-color);
-
-  .#{$prefixCls}-submenu-sub {
-    background: var(--submenu-dark-bg-color);
-    box-shadow: 0 2px 8px rgba(0, 0, 0, .45) inset;
-  }
-
-  .#{$prefixCls}-item {
-    color: var(--menuitem-dark-color);
-
-    &:hover {
-      color: var(--menuitem-dark-active-color);
-      background: inherit;
+    @include e(sub) {
+      background: var(--submenu-dark-bg-color);
+      box-shadow: 0 2px 8px rgba(0, 0, 0, .45) inset;
     }
 
-    &.selected,
-    &.active {
+    @include e(item) {
+      color: var(--menuitem-dark-color);
+
+      &:hover {
+        color: var(--menuitem-dark-active-color);
+        // background: inherit;
+
+        > a {
+          color: var(--menuitem-dark-active-color);
+        }
+      }
+
+      > a {
+        color: var(--menuitem-dark-color);
+      }
+    }
+    @include e(item--selected) {
       color: var(--menuitem-dark-active-color);
       background: var(--menuitem-active-color);
-    }
 
-    > a {
-      color: var(--menuitem-dark-color);
-    }
-
-    &:hover,
-    &.selected,
-    &.active {
       > a {
         color: var(--menuitem-dark-active-color);
       }
     }
-  }
+    @include e(item--active) {
+      color: var(--menuitem-dark-active-color);
+      background: var(--menuitem-active-color);
 
-  &.#{$prefixCls}-inline {
-    .#{$prefixCls}-submenu {
-      color: var(--menuitem-dark-color);
+      > a {
+        color: var(--menuitem-dark-active-color);
+      }
+    }
+    @include m(inline) {
+      @include e(submenu) {
+        color: var(--menuitem-dark-color);
 
-      &-title {
-        margin-top: 4px;
-        margin-bottom: 4px;
-        transition: all 0.3s;
+        @include e(title) {
+          margin-top: 4px;
+          margin-bottom: 4px;
+          transition: all 0.3s;
 
-        &:hover {
-          color: var(--menuitem-dark-active-color);
+          &:hover {
+            color: var(--menuitem-dark-active-color);
 
-          .#{$prefixCls}-submenu-arrow {
-            opacity: 1;
+            @include e(arrow) {
+              opacity: 1;
 
-            &:after,
-            &:before {
-              background: var(--menuitem-dark-active-color);
+              &:after,
+              &:before {
+                background: var(--menuitem-dark-active-color);
+              }
             }
           }
         }
-      }
 
-      &-arrow {
-        opacity: .45;
-        transition: all .3s;
+        @include e(arrow) {
+          opacity: .45;
+          transition: all .3s;
 
-        &:after,
-        &:before {
-          background: var(--menuitem-dark-active-color);
+          &:after,
+          &:before {
+            background: var(--menuitem-dark-active-color);
+          }
         }
       }
-    }
-
-    .#{$prefixCls}-item {
-      margin-top: 4px;
-      margin-bottom: 8px;
+      @include e(item) {
+        margin-top: 4px;
+        margin-bottom: 8px;
+      }
     }
   }
 }
