--- a/components/button/style/index.scss
+++ b/components/button/style/index.scss
@@ -82,6 +82,8 @@
     @include button-ghost(
       var(--button-default-ghost-border),
       var(--button-default-ghost-color),
+      var(--button-default-ghost-hover-border),
+      var(--button-default-ghost-hover-color),
       var(--button-default-ghost-active-border),
       var(--button-default-ghost-active-color)
     );
@@ -114,6 +116,8 @@
     @include button-ghost(
       var(--button-primary-ghost-border),
       var(--button-primary-ghost-color),
+      var(--button-primary-ghost-hover-border),
+      var(--button-primary-ghost-hover-color),
       var(--button-primary-ghost-active-border),
       var(--button-primary-ghost-active-color)
     );
@@ -152,6 +156,8 @@
     @include button-ghost(
       var(--button-danger-ghost-border),
       var(--button-danger-ghost-color),
+      var(--button-danger-ghost-hover-border),
+      var(--button-danger-ghost-hover-color),
       var(--button-danger-ghost-active-border),
       var(--button-danger-ghost-active-color)
     );
