--- a/components/style/themes/variable.scss
+++ b/components/style/themes/variable.scss
@@ -131,8 +131,10 @@
   --button-default-active-color: var(--theme-primary-dark);
   --button-default-ghost-border: var(--color-text-inverse);
   --button-default-ghost-color: var(--color-text-inverse);
-  --button-default-ghost-active-border: var(--theme-primary);
-  --button-default-ghost-active-color: var(--theme-primary);
+  --button-default-ghost-hover-border: var(--theme-primary-light);
+  --button-default-ghost-hover-color: var(--theme-primary-light);
+  --button-default-ghost-active-border: var(--theme-primary-dark);
+  --button-default-ghost-active-color: var(--theme-primary-dark);
   --button-primary-background: var(--theme-primary);
   --button-primary-border: var(--theme-primary);
   --button-primary-color: var(--color-text-inverse);
@@ -144,6 +146,8 @@
   --button-primary-active-color: var(--color-text-inverse);
   --button-primary-ghost-border: var(--theme-primary);
   --button-primary-ghost-color: var(--theme-primary);
+  --button-primary-ghost-hover-border: var(--theme-primary-light);
+  --button-primary-ghost-hover-color: var(--theme-primary-light);
   --button-primary-ghost-active-border: var(--theme-primary-dark);
   --button-primary-ghost-active-color: var(--theme-primary-dark);
   --button-primary-gap-color: hsla(0, 0%, 100%, 0.3);
@@ -158,6 +162,8 @@
   --button-danger-active-color: var(--color-text-inverse);
   --button-danger-ghost-border: var(--theme-danger);
   --button-danger-ghost-color: var(--theme-danger);
+  --button-danger-ghost-hover-border: var(--theme-danger-light);
+  --button-danger-ghost-hover-color: var(--theme-danger-light);
   --button-danger-ghost-active-border: var(--theme-danger-dark);
   --button-danger-ghost-active-color: var(--theme-danger-dark);
 
