--- a/components/style/themes/variable.scss
+++ b/components/style/themes/variable.scss
@@ -179,6 +179,8 @@
   --checkbox-background: var(--color-text-inverse);
 
   // Radio
+  --radio-inner-width: 14px;
+  --radio-inner-height: 14px;
   --radio-height-sm: 24px;
   --radio-height-md: 32px;
   --radio-height-lg: 40px;
