--- a/components/tabs/style/component.scss
+++ b/components/tabs/style/component.scss
@@ -10,11 +10,14 @@
       margin: 0;
       list-style: none;
       padding: 0;
-      margin-bottom: -1px;
     }
     &__arrow {
       @include b(icon) {
         color: var(--color-text-caption);
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
       }
     }
     &__item {
@@ -55,6 +58,7 @@
       opacity: 0;
       overflow: hidden;
       height: 0;
+      font-size: 14px;
       @include m(active) {
         opacity: 1;
         height: auto;
@@ -65,24 +69,33 @@
   @include m(sm) {
     @include tabs-size(
       var(--tabs-font-size-sm),
-      var(--tabs-header-padding-sm),
-      var(--tabs-header-icon-sm)
+      var(--tabs-header-icon-sm),
+      var(--tabs-header-line-padding-sm),
+      var(--tabs-header-card-padding-sm),
+      var(--tabs-header-vertical-padding-top-sm),
+      var(--tabs-header-vertical-padding-right-sm)
     );
   }
 
   @include m(md) {
     @include tabs-size(
       var(--tabs-font-size-md),
-      var(--tabs-header-padding-md),
-      var(--tabs-header-icon-md)
+      var(--tabs-header-icon-md),
+      var(--tabs-header-line-padding-md),
+      var(--tabs-header-card-padding-md),
+      var(--tabs-header-vertical-padding-top-md),
+      var(--tabs-header-vertical-padding-right-md)
     );
   }
 
   @include m(lg) {
     @include tabs-size(
       var(--tabs-font-size-lg),
-      var(--tabs-header-padding-lg),
-      var(--tabs-header-icon-lg)
+      var(--tabs-header-icon-lg),
+      var(--tabs-header-line-padding-lg),
+      var(--tabs-header-card-padding-lg),
+      var(--tabs-header-vertical-padding-top-lg),
+      var(--tabs-header-vertical-padding-right-lg)
     );
   }
 
@@ -97,6 +110,7 @@
         position: relative;
         overflow: hidden;
         white-space: nowrap;
+        margin-bottom: -1px;
       }
       &__arrow {
         height: 100%;
@@ -162,14 +176,13 @@
         height: 100%;
         overflow: hidden;
         white-space: no-wrap;
+        margin-right: -1px;
       }
       &__nav {
         position: relative;
         transition: transform .3s $default-transition;
       }
       &__item {
-        width: 70px;
-        height: 40px;
         padding: 0;
         text-align: center;
         overflow: hidden;
@@ -177,6 +190,15 @@
         text-overflow: ellipsis;
         &:last-child {
           margin-bottom: 0;
+        }
+      }
+      &__line {
+        position: absolute;
+        top: 0;
+        right: 0;
+        border-right: 2px solid var(--tabs-default-line-color);
+        &--animated {
+          transition: transform $default-transition;
         }
       }
       &__arrow {
@@ -214,7 +236,6 @@
   @include m(card) {
     @include e(header) {
       &__item {
-        padding: 10px 16px 12px;
         border: 1px solid var(--border-color);
         border-radius: 4px 4px 0 0;
         margin-right: 4px;
@@ -232,7 +253,6 @@
     @include e(header) {
       border-bottom: none;
       &__item {
-        padding: 10px 16px 12px;
         background: var(--tabs-default-noborder-background);
         &--active {
           background: var(--tabs-default-background-color);
