--- a/components/tabs/style/mixin.scss
+++ b/components/tabs/style/mixin.scss
@@ -1,12 +1,47 @@
-@mixin tabs-size($font-size, $padding, $icon-size) {
+@mixin tabs-size(
+  $font-size,
+  $icon-size,
+  $line-padding,
+  $card-padding,
+  $vertical-padding-top,
+  $vertical-padding-right,
+) {
   font-size: $font-size;
   @include e(header) {
     font-size: $font-size;
     @include b(icon) {
       font-size: $icon-size;
     }
-    &__item {
-      padding: 0 16px $padding;
+  }
+  @include m(horizontal) {
+    @include m(line) {
+      @include e(header) {
+        &__item {
+          padding: $line-padding 16px;
+        }
+      }
+    }
+    @include m(card) {
+      @include e(header) {
+        &__item {
+          padding: $card-padding 16px;
+        }
+      }
+    }
+    @include m(noborder-card) {
+      @include e(header) {
+        &__item {
+          padding: $card-padding 16px;
+        }
+      }
+    }
+  }                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  
+
+  @include m(vertical) {
+    @include e(header) {
+      &__item {
+        padding: $vertical-padding-top $vertical-padding-right;
+      }
     }
   }
 }
